Fix on background color on dark mode theme
Former-commit-id: a385196aee017da5ea3144845512558b70cdce75

--- a/components/navigation/mobileNav.module.css
+++ b/components/navigation/mobileNav.module.css
@@ -6,3 +6,11 @@
 :global(.dark) .MobileNav {
   @apply bg-gray-90 !important;
 }
+
+.Icon {
+  @apply transition-all;
+}
+
+:global(.dark) .Icon {
+  @apply text-white;
+}
